test/invalid/baseline/const-null.txt
Syntax error at line 2 in const-null.webidl, since `interface MyConstants`:
  const MyPrimitive MY_NULL = null;
                              ^ Const lacks a value
